appId: com.example.otelcim
name: "m1 auth employer email login"
tags: [m1_auth, auth]
---
- runFlow: ../common/launch.yaml
- runFlow:
    file: ../common/login.yaml
    env:
      EMAIL: employer@e2e.test
- assertVisible: ".*Ana Sayfa.*"
- tapOn: ".*Hesabım.*"
- extendedWaitUntil:
    visible: ".*Mehmet İşveren.*"
    timeout: 10000
- assertVisible: ".*İşveren.*"

